--- a/drivers/pwm/Kconfig
+++ b/drivers/pwm/Kconfig
@@ -534,7 +534,7 @@ config PWM_RASPBERRYPI_POE
 	  Enable Raspberry Pi firmware controller PWM bus used to control the
 	  official RPI PoE hat
 
-config PWM_RCAR
+config PWM_RENESAS_RCAR
 	tristate "Renesas R-Car PWM support"
 	depends on ARCH_RENESAS || COMPILE_TEST
 	depends on HAS_IOMEM
@@ -544,6 +544,28 @@ config PWM_RCAR
 
 	  To compile this driver as a module, choose M here: the module
 	  will be called pwm-rcar.
+
+config PWM_RENESAS_RZG2L_GPT
+	tristate "Renesas RZ/G2L General PWM Timer support"
+	depends on ARCH_RZG2L || COMPILE_TEST
+	depends on HAS_IOMEM
+	help
+	  This driver exposes the General PWM Timer controller found in Renesas
+	  RZ/G2L like chips through the PWM API.
+
+	  To compile this driver as a module, choose M here: the module
+	  will be called pwm-rzg2l-gpt.
+
+config PWM_RENESAS_RZ_MTU3
+	tristate "Renesas RZ/G2L MTU3a PWM Timer support"
+	depends on RZ_MTU3
+	depends on HAS_IOMEM
+	help
+	  This driver exposes the MTU3a PWM Timer controller found in Renesas
+	  RZ/G2L like chips through the PWM API.
+
+	  To compile this driver as a module, choose M here: the module
+	  will be called pwm-rz-mtu3.
 
 config PWM_RENESAS_TPU
 	tristate "Renesas TPU PWM support"
@@ -563,28 +585,6 @@ config PWM_ROCKCHIP
 	help
 	  Generic PWM framework driver for the PWM controller found on
 	  Rockchip SoCs.
-
-config PWM_RZG2L_GPT
-	tristate "Renesas RZ/G2L General PWM Timer support"
-	depends on ARCH_RZG2L || COMPILE_TEST
-	depends on HAS_IOMEM
-	help
-	  This driver exposes the General PWM Timer controller found in Renesas
-	  RZ/G2L like chips through the PWM API.
-
-	  To compile this driver as a module, choose M here: the module
-	  will be called pwm-rzg2l-gpt.
-
-config PWM_RZ_MTU3
-	tristate "Renesas RZ/G2L MTU3a PWM Timer support"
-	depends on RZ_MTU3
-	depends on HAS_IOMEM
-	help
-	  This driver exposes the MTU3a PWM Timer controller found in Renesas
-	  RZ/G2L like chips through the PWM API.
-
-	  To compile this driver as a module, choose M here: the module
-	  will be called pwm-rz-mtu3.
 
 config PWM_SAMSUNG
 	tristate "Samsung PWM support"
